cmake_minimum_required(VERSION 3.10)
project(Cpp_Concurrency_in_Action)
add_executable(listing_01.01 listing_1.1.cpp)
add_executable(listing_10.01 listing_10.1.cpp)
add_executable(listing_10.02 listing_10.2.cpp)
add_executable(listing_10.03 listing_10.3.cpp)
add_executable(listing_11.01 listing_11.1.cpp)
add_executable(listing_02.01 listing_2.1.cpp)
add_executable(listing_02.02 listing_2.2.cpp)
add_executable(listing_02.03 listing_2.3.cpp)
add_executable(listing_02.04 listing_2.4.cpp)
add_executable(listing_02.05 listing_2.5.cpp)
add_executable(listing_02.06 listing_2.6.cpp)
add_executable(listing_02.07 listing_2.7.cpp)
add_executable(listing_02.08 listing_2.8.cpp)
add_executable(listing_03.01 listing_3.1.cpp)
add_executable(listing_03.10 listing_3.10.cpp)
add_executable(listing_03.11 listing_3.11.cpp)
add_executable(listing_03.12 listing_3.12.cpp)
add_executable(listing_03.13 listing_3.13.cpp)
add_executable(listing_03.02 listing_3.2.cpp)
add_executable(listing_03.03 listing_3.3.cpp)
add_executable(listing_03.04 listing_3.4.cpp)
add_executable(listing_03.05 listing_3.5.cpp)
add_executable(listing_03.06 listing_3.6.cpp)
add_executable(listing_03.07 listing_3.7.cpp)
add_executable(listing_03.08 listing_3.8.cpp)
add_executable(listing_03.09 listing_3.9.cpp)
add_executable(listing_04.01 listing_4.1.cpp)
add_executable(listing_04.10 listing_4.10.cpp)
add_executable(listing_04.11 listing_4.11.cpp)
add_executable(listing_04.12 listing_4.12.cpp)
add_executable(listing_04.13 listing_4.13.cpp)
add_executable(listing_04.14 listing_4.14.cpp)
add_executable(listing_04.15 listing_4.15.cpp)
add_executable(listing_04.16 listing_4.16.cpp)
add_executable(listing_04.17 listing_4.17.cpp)
add_executable(listing_04.18 listing_4.18.cpp)
add_executable(listing_04.19 listing_4.19.cpp)
add_executable(listing_04.02 listing_4.2.cpp)
add_executable(listing_04.20 listing_4.20.cpp)
add_executable(listing_04.21 listing_4.21.cpp)
add_executable(listing_04.22 listing_4.22.cpp)
add_executable(listing_04.23 listing_4.23.cpp)
add_executable(listing_04.24 listing_4.24.cpp)
add_executable(listing_04.25 listing_4.25.cpp)
add_executable(listing_04.26 listing_4.26.cpp)
add_executable(listing_04.27 listing_4.27.cpp)
add_executable(listing_04.03 listing_4.3.cpp)
add_executable(listing_04.04 listing_4.4.cpp)
add_executable(listing_04.05 listing_4.5.cpp)
add_executable(listing_04.06 listing_4.6.cpp)
add_executable(listing_04.07 listing_4.7.cpp)
add_executable(listing_04.08 listing_4.8.cpp)
add_executable(listing_04.09 listing_4.9.cpp)
add_executable(listing_05.01 listing_5.1.cpp)
add_executable(listing_05.10 listing_5.10.cpp)
add_executable(listing_05.11 listing_5.11.cpp)
add_executable(listing_05.12 listing_5.12.cpp)
add_executable(listing_05.13 listing_5.13.cpp)
add_executable(listing_05.02 listing_5.2.cpp)
add_executable(listing_05.03 listing_5.3.cpp)
add_executable(listing_05.04 listing_5.4.cpp)
add_executable(listing_05.05 listing_5.5.cpp)
add_executable(listing_05.06 listing_5.6.cpp)
add_executable(listing_05.07 listing_5.7.cpp)
add_executable(listing_05.08 listing_5.8.cpp)
add_executable(listing_05.09 listing_5.9.cpp)
add_executable(listing_06.01 listing_6.1.cpp)
add_executable(listing_06.10 listing_6.10.cpp)
add_executable(listing_06.11 listing_6.11.cpp)
add_executable(listing_06.12 listing_6.12.cpp)
add_executable(listing_06.13 listing_6.13.cpp)
add_executable(listing_06.02 listing_6.2.cpp)
add_executable(listing_06.03 listing_6.3.cpp)
add_executable(listing_06.04 listing_6.4.cpp)
add_executable(listing_06.05 listing_6.5.cpp)
add_executable(listing_06.06 listing_6.6.cpp)
add_executable(listing_06.07 listing_6.7.cpp)
add_executable(listing_06.08 listing_6.8.cpp)
add_executable(listing_06.09 listing_6.9.cpp)
add_executable(listing_07.01 listing_7.1.cpp)
add_executable(listing_07.10 listing_7.10.cpp)
add_executable(listing_07.11 listing_7.11.cpp)
add_executable(listing_07.12 listing_7.12.cpp)
add_executable(listing_07.13 listing_7.13.cpp)
add_executable(listing_07.14 listing_7.14.cpp)
add_executable(listing_07.15 listing_7.15.cpp)
add_executable(listing_07.16 listing_7.16.cpp)
add_executable(listing_07.17 listing_7.17.cpp)
add_executable(listing_07.18 listing_7.18.cpp)
add_executable(listing_07.19 listing_7.19.cpp)
add_executable(listing_07.02 listing_7.2.cpp)
add_executable(listing_07.20 listing_7.20.cpp)
add_executable(listing_07.21 listing_7.21.cpp)
add_executable(listing_07.22 listing_7.22.cpp)
add_executable(listing_07.03 listing_7.3.cpp)
add_executable(listing_07.04 listing_7.4.cpp)
add_executable(listing_07.05 listing_7.5.cpp)
add_executable(listing_07.06 listing_7.6.cpp)
add_executable(listing_07.07 listing_7.7.cpp)
add_executable(listing_07.08 listing_7.8.cpp)
add_executable(listing_07.09 listing_7.9.cpp)
add_executable(listing_08.01 listing_8.1.cpp)
add_executable(listing_08.10 listing_8.10.cpp)
add_executable(listing_08.11 listing_8.11.cpp)
add_executable(listing_08.12 listing_8.12.cpp)
add_executable(listing_08.13 listing_8.13.cpp)
add_executable(listing_08.02 listing_8.2.cpp)
add_executable(listing_08.03 listing_8.3.cpp)
add_executable(listing_08.04 listing_8.4.cpp)
add_executable(listing_08.05 listing_8.5.cpp)
add_executable(listing_08.06 listing_8.6.cpp)
add_executable(listing_08.07 listing_8.7.cpp)
add_executable(listing_08.08 listing_8.8.cpp)
add_executable(listing_08.09 listing_8.9.cpp)
add_executable(listing_09.01 listing_9.1.cpp)
add_executable(listing_09.10 listing_9.10.cpp)
add_executable(listing_09.11 listing_9.11.cpp)
add_executable(listing_09.12 listing_9.12.cpp)
add_executable(listing_09.13 listing_9.13.cpp)
add_executable(listing_09.02 listing_9.2.cpp)
add_executable(listing_09.03 listing_9.3.cpp)
add_executable(listing_09.04 listing_9.4.cpp)
add_executable(listing_09.05 listing_9.5.cpp)
add_executable(listing_09.06 listing_9.6.cpp)
add_executable(listing_09.07 listing_9.7.cpp)
add_executable(listing_09.08 listing_9.8.cpp)
add_executable(listing_09.09 listing_9.9.cpp)
add_executable(listing_a.01 listing_a.1.cpp)
add_executable(listing_a.02 listing_a.2.cpp)
add_executable(listing_a.03 listing_a.3.cpp)
add_executable(listing_a.04 listing_a.4.cpp)
add_executable(listing_c.01 listing_c.1.cpp)
add_executable(listing_c.10 listing_c.10.cpp)
add_executable(listing_c.02 listing_c.2.cpp)
add_executable(listing_c.03 listing_c.3.cpp)
add_executable(listing_c.04 listing_c.4.cpp)
add_executable(listing_c.05 listing_c.5.cpp)
add_executable(listing_c.06 listing_c.6.cpp)
add_executable(listing_c.07 listing_c.7.cpp)
add_executable(listing_c.08 listing_c.8.cpp)
add_executable(listing_c.09 listing_c.9.cpp)
